Fixing Sonar Issues